--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Penguin Shop</title>
+    <!-- Fontawesome -->
+    <script
+      src="https://kit.fontawesome.com/f41b141fd6.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- tailwind css -->
     <link
       href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
@@ -341,6 +346,83 @@
                   </button>
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- about section -->
+      <section class="about-section w-full my-10">
+        <div class="about-wrap w-10/12 py-10 mx-auto grid grid-cols-2 gap-12">
+          <div
+            class="
+              about-item
+              flex
+              justify-between
+              items-center
+              p-4
+              shadow-lg
+              bg-gray-50
+            "
+          >
+            <div class="about-icon mr-8">
+              <img src="icons/image 12.png" width="78" alt="" />
+            </div>
+            <div class="about-text space-y-2">
+              <h4 class="font-medium text-2xl">Find the Perfect Fit</h4>
+              <p>
+                Everybody is different, which is why we offer styles for every
+                body.
+              </p>
+            </div>
+          </div>
+
+          <div class="about-item flex justify-between p-4 row-span-3">
+            <div class="about-img flex items-end">
+              <img src="images/shopping.png" alt="" />
+            </div>
+          </div>
+
+          <div
+            class="
+              about-item
+              flex
+              justify-between
+              items-center
+              p-4
+              shadow-lg
+              bg-gray-50
+            "
+          >
+            <div class="about-icon mr-8">
+              <img src="icons/image 13.png" width="78" alt="" />
+            </div>
+            <div class="about-text space-y-2">
+              <h4 class="font-medium text-2xl">Free Exchanges</h4>
+              <p>One of the many reasons you can shop with peace of mind.</p>
+            </div>
+          </div>
+
+          <div
+            class="
+              about-item
+              flex
+              justify-between
+              items-center
+              p-4
+              shadow-lg
+              bg-gray-50
+            "
+          >
+            <div class="about-icon mr-8">
+              <img src="icons/image 14.png" width="78" alt="" />
+            </div>
+            <div class="about-text space-y-2">
+              <h4 class="font-medium text-2xl">Contact Our Seller</h4>
+              <p>
+                They are here to help you. That's quite literally what we pay
+                them for.
+              </p>
             </div>
           </div>
         </div>
